--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,11 @@ footer span {
     color: red; /* Red heart */
 }
 
+/* Make clicked URLs red */
+a:visited {
+    color: red;
+}
+
 @media (max-width: 768px) {
     h1 {
         font-size: 2rem;
